[Cronet] Leak CronetHttpProtocolHandlerDelegate on shutdown. Prevent crash if background threads are handling requests while main is exiting.

BUG=706580
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2778743010
Cr-Commit-Position: refs/heads/master@{#460904}

Former-commit-id: 65d11a7c591307ff2d10145a07655b53010e04d0